--- a/www/about.html
+++ b/www/about.html
@@ -7,7 +7,7 @@ no_h1: true
 <div class="row pt-2">
     <div class="col">
         <h1 class="d-flex justify-content-center">
-            <img src="/images/about/about.svg" style="height:105px!important;"/>
+            <a href="/index.html"><img alt="about" src="/images/about/about.svg" /></a>
         </h1>
     </div>
 </div>
