--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@ redirect_from:
 ---
 <div class="jumbotron jumbotron-fluid bg-transparent pb-0 pt-2">
     <div class="container px-0">
-        <h1 class="display-4 d-flex justify-content-center"><img src="/images/about/vlzlogo-grey.svg" style="height:105px!important;"/></h1>
+        <h1 class="display-4 d-flex justify-content-center"><a href="/about.html"><img alt="logo" src="/images/about/vlzlogo-grey.svg" style="max-width: 100%;object-fit: contain;"/></a></h1>
         <p class="lead d-flex justify-content-center" style="font-size:1.75rem;">3,000+ Uniform SVG Logos</p>
     </div>
 </div>
