--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -7,8 +7,9 @@ layout: none
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex" />
 	<title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <script src="/js/jquery-3.3.1.min.js"></script>
