--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -14,7 +14,7 @@ redirect_from: /logos/missing.html
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th class="text-center d-none d-lg-table-cell d-print-table-cell">Other>ID</th>
+            <th class="text-center d-none d-lg-table-cell d-print-table-cell">ID</th>
             <th>Name</th>
             <th>Icon</th>
             <th>Rectangle</th>
@@ -35,7 +35,7 @@ redirect_from: /logos/missing.html
             {%- if logopage.images contains logoicon %}{% assign othercount = othercount | minus:1 %}{% endif -%}
         <tr>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell"><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.logohandle}}</a></td>
-            <td>{{logopage.title | default: "(untitled)"}}</td>
+            <td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title | default: "(untitled)"}}</a></td>
             <td>{% unless logopage.images contains logoicon %}MISSING{% endunless %}</td>
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
@@ -59,9 +59,9 @@ redirect_from: /logos/missing.html
     {%- endif %}
 {%- endfor %}
     </tbody>
-    <tfoot>
+    <tfoot class="d-none d-lg-table-cell d-print-table-cell">
         <tr>
-            <td class="text-center d-none d-lg-table-cell d-print-table-cell">Other></td>
+            <td class="text-center d-none d-lg-table-cell d-print-table-cell"></td>
             <td></td>
             <td></td>
             <td></td>
