--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -59,8 +59,8 @@ redirect_from: /logos/missing.html
     {%- endif %}
 {%- endfor %}
     </tbody>
-    <tfoot class="d-none d-lg-table-cell d-print-table-cell">
-        <tr>
+    <tfoot>
+        <tr class="d-none d-lg-table-row d-print-table-row">
             <td class="text-center d-none d-lg-table-cell d-print-table-cell"></td>
             <td></td>
             <td></td>
