--- a/www/support/index.html
+++ b/www/support/index.html
@@ -8,10 +8,11 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>Can I use these images without royalties/attribution/etc?</h3>
-        <p>I am not the copyright/trademark/etc owner of any of these.  Use them at your own risk.</p>
+        <p>I am not the copyright/trademark/etc owner of any<sup>*</sup> of these.  Use them at your own risk.</p>
         <p>If you are the owner and do not want your logo here, please let me know (nicely) and I will be glad to remove it.
         No lawyers necessary: just <a href="https://github.com/VectorLogoZone/vectorlogozone/issues/new">submit an issue</a> on github!
         Alternatively, it would be great if you provided the appropriately sized images yourself.</p>
+        <p><small><sup>*</sup>Actually, I do own a few, so don't clone the site and think I won't notice!</small></p>
     </div>
 </div>
 
@@ -20,6 +21,7 @@ redirect_from:
         <h3>Can I hotlink the images, or do I have to make my own copy?</h3>
         <p>I originally wasn't going to allow hotlinking, but CloudFlare promises unlimited free bandwidth, so I changed my
 	   mind.  Unless CloudFlare changes their mind, hotlink away!</p>
+        <p>I always appreciate a link back (using a <a href="/logos/vectorlogozone/">VectorLogoZone logo</a> naturally!), but it isn't required.</p>
     </div>
 </div>
 
@@ -27,7 +29,7 @@ redirect_from:
     <div class="col-md-12">
         <h3>How reliable is the site?</h3>
         <p>It is a static site, so it should be quite reliable.  You can check the <a href="https://nodeping.com/reports/checks/wbe44oj5-13fx-4h6l-8ojp-tlbno9b01gmu">recent uptime report</a> to see for yourself!</p>
-        <p>That said, there are no guarantees.  Feel free to host the images you use on your own servers.</p>
+        <p>That said, there are no guarantees.  Feel free to host the images you use on your own servers (though I would still like that backlink!).</p>
     </div>
 </div>
 
@@ -50,14 +52,15 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>Will my users be able to see them?</h3>
-        <p>According to <a href="http://caniuse.com/#feat=svg-img">Can I Use</a>, 96% will be able to see them.</p>
+        <p>According to <a href="http://caniuse.com/#feat=svg-img">Can I Use</a>, 96% will be able to see them.  It is probably quite a bit higher than that, since
+        most of the remaining 4% support it, just not with embedded data URIs, which should not be in any of these SVGs.</p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-12">
         <h3>But I really want to support IE8!</h3>
-        <p>I have seen several different ways: <a href="https://css-tricks.com/a-complete-guide-to-svg-fallbacks/">picture, image</a> and <a href="http://www.sitepoint.com/graceful-fallback-svgs-old-ie/">onerror</a>.</p>
+        <p>I have seen several different ways: <a href="https://css-tricks.com/a-complete-guide-to-svg-fallbacks/">picture, image</a> and <a href="http://www.sitepoint.com/graceful-fallback-svgs-old-ie/">onerror</a>. Good luck!</p>
     </div>
 </div>
 
@@ -99,8 +102,7 @@ redirect_from:
 <div class="row">
     <div class="col-md-12">
         <h3>I have a question that is not answered here!</h3>
-        <p>Feel free to <a href="contact.html">contact me</a>.  Please note that this is just an unpaid sideline, so do not
-	expect an immediate response.</p>
+        <p>Feel free to <a href="contact.html">contact me</a>.  Please note that this is just an unpaid sideline, so do not expect an immediate response.</p>
     </div>
 </div>
 
