fix for image overlaying navbar when zooming in

--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -21,7 +21,7 @@ layout: none
 	#preview-container { width: 100%; height:100%;background-image: url("/images/preview/background_light.png"); background-repeat: repeat-x repeat-y;}
 	#xpreview-image { display: block; margin: auto;vertical-align: middle; width:24px; height:24px;}
     .color-block { border: 1px solid #cccccc; display: inline-block; width: 18px; height: 18px; margin-right: 5px; margin-top: 3px; vertical-align: text-bottom;}
-#preview-container { position: relative;}
+#preview-container { position: relative; overflow: hidden;}
 #preview-image {
     position: absolute;
     margin: auto;
