adjusted tag line

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@ redirect_from:
 <div class="jumbotron jumbotron-fluid bg-transparent pb-0 pt-2">
     <div class="container px-0">
         <h1 class="display-4 d-flex justify-content-center"><a href="/about.html"><img alt="logo" src="/images/about/vlzlogo-grey.svg" style="max-width: 100%;object-fit: contain;"/></a></h1>
-        <p class="lead d-flex justify-content-center" style="font-size:1.75rem;">3,000+ Uniform SVG Logos</p>
+        <p class="lead d-flex justify-content-center" style="font-size:1.75rem;">3,000+ gorgeous SVG logos, perfect for your README or credits page</p>
     </div>
 </div>
 
