link to vlz-contrib for contribution info

--- a/www/support/index.html
+++ b/www/support/index.html
@@ -77,18 +77,9 @@ redirect_from:
     <div class="col-md-12">
         <h3>How can I help?</h3>
         <p>
-	   Contributions are welcome!  See the <a href="guidelines.html">image guidelines</a> and <a href="https://github.com/VectorLogoZone/vectorlogozone/blob/gh-pages/CONTRIBUTING.md">contributing how-to</a>.
-	</p>
+        Contributions are welcome!  Please see the <a href="https://github.com/VectorLogoZone/vlz-contrib">vlz-contrib</a> repo for guidelines and templates.
+        </p>
 	<p>Thanks in advance!</p>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-12">
-        <h3>How can I identify the font used in a logo?</h3>
-        <p><a href="http://www.myfonts.com/WhatTheFont/">WhatTheFont</a> - upload a sample image.  They also have an active <a href="http://www.myfonts.com/WhatTheFont/forum/">forum</a> where fonts experts will help.</p>
-        <p><a href="http://www.identifont.com/">IdentiFont</a> - answer a series of questions about specific characters.  Be sure to use the character filter.</p>
-        <p><a href="http://www.chengyinliu.com/whatfont.html">WhatFont bookmarklet</a> - really nice and easy way to see the fonts used in an HTML page</p>
     </div>
 </div>
 
