title on home page

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Uniform SVG Logos
+title: Gorgeous SVG logos, perfect for your README or credits page
 no_h1: true
 redirect_from:
 - /util/index.html
